--- a/requirements_predictakenya.txt
+++ b/requirements_predictakenya.txt
@@ -23,3 +23,10 @@ xlrd==2.0.1
 # Utilities
 python-dateutil==2.8.2
 pytz==2023.3
+
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.17.0
+scikit-learn>=1.3.0
+openpyxl>=3.1.0
